fix aligning

--- a/src/Components/Notes/NotesList.css
+++ b/src/Components/Notes/NotesList.css
@@ -1,4 +1,8 @@
-
+.notes-list-container{
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+}
 
 .notes-list {
 	display: grid;
